# hollowreach

./: .gitignore  .tmp_read_chats.py  Cargo.toml  DESIGN.md  INTERACTION_DESIGN.md  README.md  TECHNICAL_PLAN.md  lm_inputs.txt  test.sh
.claude/: settings.json
.github/: copilot-instructions.md
docs/: llm_research.md  ui_guidelines.md
saves/: elara_memory.json  grok_memory.json  sir_roland_memory.json  sylva_memory.json  whisper_memory.json
scripts/: tts_worker.py
src/: chat_log.rs  context.rs  debug_overlay.rs  game_log.rs  interactions.rs  inventory.rs  lib.rs  llm.rs  main.rs  npc_ai.rs  npc_look_at.rs  npc_memory.rs  panel.rs  pause_menu.rs  text_input.rs  tts.rs  ui_helpers.rs
tests/: e2e.rs  test_9slice.rs  test_chest_unlock.rs  test_full_ui.rs  test_multi_npc.rs  test_real_e2e.rs  test_tts.rs  validate.rs
