[package]
name = "hollowreach"
version = "0.1.0"
edition = "2024"
description = "A 3D first-person exploration game built with Bevy"
license = "MIT"

[dependencies]
bevy = { version = "0.18", features = ["jpeg", "wav"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
llama-cpp-2 = "0.1"
encoding_rs = "0.8"
crossbeam-channel = "0.5"
ort = { version = "2.0.0-rc.12", features = ["half", "cuda"] }
tokenizers = "0.21"
ndarray = "0.16"
half = { version = "2.3", features = ["num-traits"] }
rand = "0.8"


[[test]]
name = "e2e"
path = "tests/e2e.rs"
harness = false

[[test]]
name = "validate"
path = "tests/validate.rs"
harness = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[test]]
name = "test_9slice"
path = "tests/test_9slice.rs"
harness = false

[[test]]
name = "test_tts"
path = "tests/test_tts.rs"
harness = false
