[package]
name = "hollowreach"
version = "0.1.0"
edition = "2024"
description = "A 3D first-person exploration game built with Bevy"
license = "MIT"

[dependencies]
bevy = { version = "0.18", features = ["jpeg", "wav"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[[test]]
name = "e2e"
path = "tests/e2e.rs"
harness = false

[[test]]
name = "validate"
path = "tests/validate.rs"
harness = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[test]]
name = "test_9slice"
path = "tests/test_9slice.rs"
harness = false

